--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "jsonwebtoken": "^9.0.3",
     "limiter": "^3.0.0",
     "lucide-react": "^0.563.0",
-    "next": "15.1.6",
+    "next": "^15.5.12",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.3",
     "prisma": "^5.22.0",
